--- a/app/pages/about.pug
+++ b/app/pages/about.pug
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+doctype html
 html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Some title
+    title Document
   body
-    h1 hello from page
+    h1 Hello from about page!
