--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,7 @@
 @import "fonts";
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Montserrat", "Arial", sans-serif;
   background-color: cornflowerblue;
 }
 
