svg шрифты улетают в сборку

--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -3,7 +3,7 @@
   src: url("../fonts/Montserrat-Regular.woff");
   src: url("../fonts/Montserrat-Regular.woff") format("woff"),
     url("../fonts/Montserrat-Regular.ttf") format("truetype"),
-    url("../fonts/Montserrat-Regular.svg#webfont") format("svg");
+    url("../fonts/Montserrat-Regular.font.svg#webfont") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -13,7 +13,7 @@
   src: url("../fonts/Montserrat-Bold.woff");
   src: url("../fonts/Montserrat-Bold.woff") format("woff"),
     url("../fonts/Montserrat-Bold.ttf") format("truetype"),
-    url("../fonts/Montserrat-Bold.svg#webfont") format("svg");
+    url("../fonts/Montserrat-Bold.font.svg#webfont") format("svg");
   font-weight: bold;
   font-style: normal;
 }
