--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -2,5 +2,5 @@ header.page-header
   .wrapper
     h2.page-header__title Привет, я хедер
     .page-header__pict
-      img(width="150" height="150" src=("images/js-logo.svg"))
+      img(width="150" height="150" src=("./components/header/js-logo.svg"))
       
