--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -1,19 +1,19 @@
 @font-face {
-  font-family: "Montserrat";
-  src: url("../fonts/Montserrat-Regular.woff");
-  src: url("../fonts/Montserrat-Regular.woff") format("woff"),
-    url("../fonts/Montserrat-Regular.ttf") format("truetype"),
-    url("../fonts/Montserrat-Regular.font.svg#webfont") format("svg");
   font-weight: normal;
+  font-family: 'Montserrat';
   font-style: normal;
+  src: url('../fonts/Montserrat-Regular.woff');
+  src: url('../fonts/Montserrat-Regular.woff') format('woff'),
+    url('../fonts/Montserrat-Regular.ttf') format('truetype'),
+    url('../fonts/Montserrat-Regular.font.svg#webfont') format('svg');
 }
 
 @font-face {
-  font-family: "Montserrat";
-  src: url("../fonts/Montserrat-Bold.woff");
-  src: url("../fonts/Montserrat-Bold.woff") format("woff"),
-    url("../fonts/Montserrat-Bold.ttf") format("truetype"),
-    url("../fonts/Montserrat-Bold.font.svg#webfont") format("svg");
   font-weight: bold;
+  font-family: 'Montserrat';
   font-style: normal;
+  src: url('../fonts/Montserrat-Bold.woff');
+  src: url('../fonts/Montserrat-Bold.woff') format('woff'),
+    url('../fonts/Montserrat-Bold.ttf') format('truetype'),
+    url('../fonts/Montserrat-Bold.font.svg#webfont') format('svg');
 }
