--- a/app/index.pug
+++ b/app/index.pug
@@ -1,3 +1,5 @@
+include components/logo/logo
+
 doctype html
 html(lang="en")
   head
@@ -7,4 +9,5 @@ html(lang="en")
     title Document
   body
     include components/header/header
+    +logo({width: 106, height: 40})
     include components/footer/footer
