--- a/app/index.pug
+++ b/app/index.pug
@@ -8,6 +8,5 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Document
   body
-    include components/header/header
-    +logo({width: 106, height: 40})
-    include components/footer/footer
+  .container
+    +logo({width: 120, height: 60})
