--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,6 @@
+@import 'normolize';
 @import 'fonts';
-@import 'variables.scss';
+@import 'variables';
 
 body {
   font-family: 'Montserrat', 'Arial', sans-serif;
