подключил layout main в Index

--- a/app/index.pug
+++ b/app/index.pug
@@ -1,12 +1,6 @@
-include components/logo/logo
+extends layout/main.pug
 
-doctype html
-html(lang="ru")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Toxin
-  body
-  .container
-    +logo({width: 120, height: 60})
+block variables
+  - var title = "Toxin - поможет подобрать отель"
+  - var description = "Toxin description"
+  - var pageClass = "index-page"
