--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -1,11 +1,3 @@
-.page-header__menu-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.page-header__menu-item {
-  a {
-    color: blue;
-  }
+.page-header__wrap {
+  padding: 14px 0;
 }
