--- a/app/index.pug
+++ b/app/index.pug
@@ -1,6 +1,6 @@
 extends layout/main.pug
 
 block variables
-  - var title = "Toxin - поможет подобрать отель"
+  - var title = "Toxin - подбери свой отель!"
   - var description = "Toxin description"
   - var pageClass = "index-page"
