--- a/app/components/main-menu/main-menu.pug
+++ b/app/components/main-menu/main-menu.pug
@@ -1,14 +1,14 @@
 mixin mainMenu(menuItems)
-  nav
-    ul.page-header__menu-list
+  nav.main-menu
+    ul.main-menu__list
       each item in menuItems
         if item.subMenu
-          li(class="page-header__menu-item  page-header__menu-item--sub-menu")
+          li(class="main-menu__item  main-menu__item--sub-menu")
             a(href=item.path)= item.title
-            ul.page-header__sub-menu
+            ul.main-menu__sub-menu
               each subItem in item.subMenu
-                li.page-header__menu-sub-item
+                li.main-menu__sub-item
                   a(href=subItem.path)= subItem.title
         else
-          li.page-header__menu-item
+          li.main-menu__item
             a(href=item.path)= item.title
