добавил временную заглушку блок

--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -31,3 +31,4 @@ header.page-header
     .page-header__wrap
       +logo({width: 120, height: 60})
       +mainMenu(menuItems)
+      .page-header__buttons
