подключил стили main menu

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,4 +29,5 @@ body {
 
 @import '../components/header/header';
 @import '../components/logo/logo';
+@import '../components/main-menu/main-menu';
 @import '../components/footer/footer';
