переименовал переменные цвета в camelCase стили

--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -6,7 +6,7 @@ $phoneWidth: 480px;
 $smPhoneWidth: 320px;
 
 // Colors
-$main-color: #ffffff;
-$accent-color: #bc9cff;
-$accent-second-color: #6fcf97;
-$content-color: #1f2041;
+$mainColor: #ffffff;
+$accentColor: #bc9cff;
+$accentSecond-color: #6fcf97;
+$contentColor: #1f2041;
