описал стили для элементов меню с подменю

--- a/app/components/main-menu/main-menu.scss
+++ b/app/components/main-menu/main-menu.scss
@@ -34,4 +34,29 @@
 
 .main-menu__item {
   margin-right: 20px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+  &--sub-menu {
+    position: relative;
+    padding-right: 20px;
+
+    &::after {
+      position: absolute;
+      top: 50%;
+      right: 0;
+      width: 8px;
+      height: 8px;
+      margin-top: -6px;
+      background-color: transparent;
+      border-right: 2px solid $contentColor;
+      border-bottom: 2px solid $contentColor;
+
+      transform: rotate(45deg);
+      opacity: 0.5;
+      content: '';
+    }
+  }
 }
