--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,7 +3,7 @@
 @import 'variables';
 
 body {
-  font-family: 'Montserrat', 'Arial', sans-serif;
+  font-family: $fontFamily;
 }
 
 .container {
@@ -30,4 +30,5 @@ body {
 @import '../components/header/header';
 @import '../components/logo/logo';
 @import '../components/main-menu/main-menu';
+@import '../components/button/button';
 @import '../components/footer/footer';
