--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -1,4 +1,5 @@
 include ../logo/logo
+include ../button/button
 include ../main-menu/main-menu
 
 -
@@ -32,3 +33,5 @@ header.page-header
       +logo({width: 120, height: 60})
       +mainMenu(menuItems)
       .page-header__buttons
+        +button({title: 'Войти'})
+        +button({title: 'Зарегистрироваться', path: '#'})
