--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -11,5 +11,6 @@ $smPhoneWidth: 320px;
 // Colors
 $mainColor: #ffffff;
 $accentColor: #bc9cff;
+$accentGradColor: #8ba4f9;
 $accentSecond-color: #6fcf97;
 $contentColor: #1f2041;
