--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -12,5 +12,5 @@ $smPhoneWidth: 320px;
 $mainColor: #ffffff;
 $accentColor: #bc9cff;
 $accentGradColor: #8ba4f9;
-$accentSecond-color: #6fcf97;
+$accentSecondСolor: #6fcf97;
 $contentColor: #1f2041;
