--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -13,4 +13,5 @@ $mainColor: #ffffff;
 $accentColor: #bc9cff;
 $accentGradColor: #8ba4f9;
 $accentSecondСolor: #6fcf97;
+$accentGradSecondСolor: #66d2ea;
 $contentColor: #1f2041;
