Передаю нужные свойства в миксин кнопки

--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -33,5 +33,5 @@ header.page-header
       +logo({width: 120, height: 60})
       +mainMenu(menuItems)
       .page-header__buttons
-        +button({title: 'Войти'})
-        +button({title: 'Зарегистрироваться', path: '#'})
+        +button({ title: 'Войти', path: '#', isEmptyStyle: true })
+        +button({ title: 'Зарегистрироваться', path: '#' })
