переименовал page-header__butons В __auth

--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -32,6 +32,6 @@ header.page-header
     .page-header__wrap
       +logo({width: 120, height: 60})
       +mainMenu(menuItems)
-      .page-header__buttons
+      .page-header__auth
         +button({ title: 'Войти', path: '#', isEmptyStyle: true })
         +button({ title: 'Зарегистрироваться', path: '#' })
