--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -3,7 +3,7 @@
   padding: 14px 0;
 }
 
-.page-header__buttons {
+.page-header__auth {
   display: flex;
   align-items: center;
   justify-content: space-between;
