--- a/app/components/main-menu/main-menu.scss
+++ b/app/components/main-menu/main-menu.scss
@@ -46,10 +46,10 @@
     &::after {
       position: absolute;
       top: 50%;
-      right: 0;
-      width: 8px;
-      height: 8px;
-      margin-top: -6px;
+      right: 3px;
+      width: 6px;
+      height: 6px;
+      margin-top: -4px;
       background-color: transparent;
       border-right: 2px solid $contentColor;
       border-bottom: 2px solid $contentColor;
