--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -12,5 +12,6 @@
   align-items: center;
   justify-content: space-between;
   width: 303px;
-  margin-left: 31px;
+  margin-left: 22px;
+  padding-bottom: 4px;
 }
