передаю пустой объект в миксин header

--- a/app/layout/main.pug
+++ b/app/layout/main.pug
@@ -10,6 +10,6 @@ html(lang="ru")
     meta(name="description", content=description)
     title #{title}
   body(class=pageClass)
-    +header
+    +header({})
     block content
     include ../components/footer/footer
