вынес normolize и variables в папку utils

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,6 @@
-@import 'normolize';
+@import 'utils/normolize';
+@import 'utils/variables';
 @import 'fonts';
-@import 'variables';
 
 body {
   color: $contentColor;
