добавил окрашивания текста в логотипе при ховере

--- a/app/components/logo/logo.scss
+++ b/app/components/logo/logo.scss
@@ -1,8 +1,18 @@
 .logo {
   position: relative;
+}
 
-  a {
-    position: absolute;
-    top: -2px;
+.logo__link {
+  position: absolute;
+  top: -2px;
+
+  &:hover {
+    .logo__letter {
+      fill: $accentColor;
+    }
   }
+}
+
+.logo__letter {
+  transition: fill 0.4s ease;
 }
