Подключил шрифт Quicksand

--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -17,3 +17,24 @@
     url('../fonts/Montserrat-Bold.ttf') format('truetype'),
     url('../fonts/Montserrat-Bold.font.svg#webfont') format('svg');
 }
+
+@font-face {
+  font-weight: normal;
+  font-family: 'Quicksand';
+  font-style: normal;
+  src: url('../fonts/Quicksand-Regular.woff');
+  src: url('../fonts/Quicksand-Regular.woff') format('woff'),
+    url('../fonts/Quicksand-Regular.ttf') format('truetype'),
+    url('../fonts/Quicksand-Regular.font.svg#webfont') format('svg');
+}
+
+@font-face {
+  font-weight: bold;
+  font-family: 'Quicksand';
+  font-style: normal;
+  src: url('../fonts/Quicksand-Bold.woff');
+  src: url('../fonts/Quicksand-Bold.woff') format('woff'),
+    url('../fonts/Quicksand-Bold.ttf') format('truetype'),
+    url('../fonts/Quicksand-Bold.font.svg#webfont') format('svg');
+}
+
