--- a/app/components/button/button.scss
+++ b/app/components/button/button.scss
@@ -39,6 +39,7 @@
   &--empty-style {
     position: relative;
     z-index: 0;
+    padding: 11px 21px;
     color: $accentColor;
     background: none;
     transition: color 0.4s ease;
