увеличил контраст при наведении на логотип и элементы меню

--- a/app/components/logo/logo.scss
+++ b/app/components/logo/logo.scss
@@ -8,7 +8,7 @@
 
   &:hover {
     .logo__letter {
-      fill: $accentColor;
+      fill: darken($accentColor, 10%);
     }
 
     .logo__label-left {
