задал осмысленные названия для под меню

--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -9,9 +9,9 @@ include ../main-menu/main-menu
       title: 'Услуги', 
       path: '#', 
       subMenu: [ 
-        { title: 'Item 1', path: '#' }, 
-        { title: 'Item 2', path: '#' }, 
-        { title: 'Item 3', path: '#' } 
+        { title: 'Подбор отелей', path: '#' }, 
+        { title: 'Заказать трансфер', path: '#' }, 
+        { title: 'Рейтинг отелей', path: '#' } 
       ]
     }, 
     { title: 'Вакансии', path: '#' },
@@ -20,9 +20,8 @@ include ../main-menu/main-menu
       title: 'Соглашения', 
       path: '#',
       subMenu: [ 
-        { title: 'Item 1', path: '#' }, 
-        { title: 'Item 2', path: '#' }, 
-        { title: 'Item 3', path: '#' } 
+        { title: 'Пользовательские', path: '#' }, 
+        { title: 'Международные', path: '#' }
       ]
     }
   ]
