--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,4 +33,5 @@ body {
 @import '../components/logo/logo';
 @import '../components/main-menu/main-menu';
 @import '../components/button/button';
+@import '../components/text-content/text-content';
 @import '../components/footer/footer';
