--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -1,3 +1,4 @@
-.page-footer__title {
-  font-size: 16px;
+.page-footer {
+  padding: 100px 0;
+  box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
 }
