logo больше не надо передавать width и height

--- a/app/components/footer/footer.pug
+++ b/app/components/footer/footer.pug
@@ -4,5 +4,5 @@ include ../text-content/text-content
 footer.page-footer
   .container
     .page-footer__wrap
-      +logo({ width: 120, height: 40 })
+      +logo()
       +textContent({text: 'Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»'})
