--- a/app/components/main-menu/main-menu.scss
+++ b/app/components/main-menu/main-menu.scss
@@ -1,5 +1,6 @@
 .main-menu {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   margin-left: auto;
 }
@@ -13,6 +14,7 @@
 
 .main-menu__list {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
 }
 
