--- a/app/components/nav-menu/nav-menu.pug
+++ b/app/components/nav-menu/nav-menu.pug
@@ -1,7 +1,9 @@
 mixin navMenu(navItem)
-  if navItem.title
-    h2.nav-menu= navItem.title
-  ul.nav-menu__list
-    each item in navItem.list
-      li.nav-menu__item
-        a(href=item.path)= item.label
+  section.nav-menu
+    .nav-menu__wrap
+      if navItem.title
+        h2.nav-menu__title= navItem.title
+      ul.nav-menu__list
+        each item in navItem.list
+          li.nav-menu__item
+            a(href=item.path)= item.label
