--- a/app/components/text-content/text-content.scss
+++ b/app/components/text-content/text-content.scss
@@ -1,3 +1,12 @@
+.text-content__title {
+  margin: 0;
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  text-transform: uppercase;
+}
+
 .text-content__paragraph {
   margin: 0;
   color: $contentColor;
