подключил стили к nav-menu

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,4 +34,5 @@ body {
 @import '../components/main-menu/main-menu';
 @import '../components/button/button';
 @import '../components/text-content/text-content';
+@import '../components/nav-menu/nav-menu';
 @import '../components/footer/footer';
