подключил стили Input

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -35,4 +35,5 @@ body {
 @import '../components/button/button';
 @import '../components/text-content/text-content';
 @import '../components/nav-menu/nav-menu';
+@import '../components/input/input';
 @import '../components/footer/footer';
