--- a/app/components/footer/footer.pug
+++ b/app/components/footer/footer.pug
@@ -40,4 +40,4 @@ footer.page-footer
         })
       div(class='page-footer__col  page-footer__col--large')
         +textContent({ title: 'Подписка', text: 'Получайте специальные предложения и новости сервиса' })
-        +input({placeholder: 'Email'})
+        +input({ type: 'email', placeholder: 'Email' })
