--- a/app/components/main-menu/main-menu.scss
+++ b/app/components/main-menu/main-menu.scss
@@ -110,16 +110,14 @@
 .main-menu__item,
 .main-menu__sub-item {
   a {
-    color: $contentColor;
+    color: transparentize($contentColor, 0.5);
     font-size: 14px;
     line-height: 17px;
     text-decoration: none;
-    opacity: 0.5;
-    transition: color 0.4s ease, opacity 0.4s ease;
+    transition: color 0.4s ease;
 
     &:hover {
       color: darken($accentColor, 10%);
-      opacity: 1;
     }
   }
 }
