--- a/app/components/nav-menu/nav-menu.scss
+++ b/app/components/nav-menu/nav-menu.scss
@@ -17,16 +17,14 @@
   margin-bottom: 20px;
 
   a {
-    color: $contentColor;
+    color: transparentize($contentColor, 0.5);
     font-size: 14px;
     line-height: 17px;
     text-decoration: none;
-    opacity: 0.5;
-    transition: opacity 0.4s ease, color 0.4s ease;
+    transition: color 0.4s ease;
 
     &:hover {
       color: darken($accentColor, 10%);
-      opacity: 1;
     }
   }
 }
