--- a/app/components/text-content/text-content.scss
+++ b/app/components/text-content/text-content.scss
@@ -9,8 +9,7 @@
 
 .text-content__paragraph {
   margin: 0;
-  color: $contentColor;
+  color: transparentize($contentColor, 0.25);
   font-size: 14px;
   line-height: 24px;
-  opacity: 0.75;
 }
