--- a/app/components/input/input.scss
+++ b/app/components/input/input.scss
@@ -1,4 +1,22 @@
 .input {
   box-sizing: border-box;
   width: 100%;
+  padding: 9px 15px;
+  color: transparentize($contentColor, 0.25);
+  font-size: 14px;
+  font-family: $fontFamily;
+  line-height: 24px;
+  border: 1px solid transparentize($contentColor, 0.75);
+  border-radius: 4px;
+  outline: none;
+  transition: border 0.4s ease;
+
+  &::placeholder {
+    color: transparentize($contentColor, 0.75);
+  }
+
+  &:hover,
+  &:focus {
+    border-color: transparentize($contentColor, 0.25);
+  }
 }
