--- a/app/components/input/input.scss
+++ b/app/components/input/input.scss
@@ -1,4 +1,19 @@
-.input {
+.input-group {
+  display: flex;
+
+  &:hover,
+  &:focus {
+    .input-group__input {
+      border-color: transparentize($contentColor, 0.25);
+    }
+
+    .input-group__button-split {
+      border-color: transparentize($contentColor, 0.25);
+    }
+  }
+}
+
+.input-group__input {
   box-sizing: border-box;
   width: 100%;
   padding: 9px 15px;
@@ -11,6 +26,12 @@
   outline: none;
   transition: border 0.4s ease;
 
+  &--button-split {
+    position: relative;
+    border-right: none;
+    border-radius: 4px 0 0 4px;
+  }
+
   &::placeholder {
     color: transparentize($contentColor, 0.75);
   }
@@ -18,5 +39,23 @@
   &:hover,
   &:focus {
     border-color: transparentize($contentColor, 0.25);
+
+    + .input-group__button-split {
+      border-color: transparentize($contentColor, 0.25);
+    }
   }
+}
+
+.input-group__button-split {
+  width: 40px;
+  background-color: transparent;
+  background-image: url('arrow_forward.svg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  border: 1px solid transparentize($contentColor, 0.75);
+  border-left: none;
+  border-radius: 0 4px 4px 0;
+  outline: none;
+  cursor: pointer;
+  transition: border 0.4s ease;
 }
