--- a/app/components/input/input.scss
+++ b/app/components/input/input.scss
@@ -28,6 +28,7 @@
 
   &--button-split {
     position: relative;
+    width: 216px;
     border-right: none;
     border-radius: 4px 0 0 4px;
   }
@@ -47,7 +48,8 @@
 }
 
 .input-group__button-split {
-  width: 40px;
+  box-sizing: border-box;
+  width: 44px;
   background-color: transparent;
   background-image: url('arrow_forward.svg');
   background-repeat: no-repeat;
