--- a/app/components/input/input.scss
+++ b/app/components/input/input.scss
@@ -59,5 +59,9 @@
   border-radius: 0 4px 4px 0;
   outline: none;
   cursor: pointer;
-  transition: border 0.4s ease;
+  transition: border 0.4s ease, background 0.2s ease;
+
+  &:active {
+    background-position: 20px center;
+  }
 }
