--- a/app/components/input/input.scss
+++ b/app/components/input/input.scss
@@ -29,6 +29,7 @@
   &--button-split {
     position: relative;
     width: 216px;
+    padding-right: 0;
     border-right: none;
     border-radius: 4px 0 0 4px;
   }
