--- a/app/components/nav-menu/nav-menu.scss
+++ b/app/components/nav-menu/nav-menu.scss
@@ -16,6 +16,10 @@
 .nav-menu__item {
   margin-bottom: 20px;
 
+  &:last-child {
+    margin-bottom: 0;
+  }
+
   a {
     color: transparentize($contentColor, 0.5);
     font-size: 14px;
