сделал обертку page-footer__content

--- a/app/components/footer/footer.pug
+++ b/app/components/footer/footer.pug
@@ -6,38 +6,39 @@ include ../input/input
 footer.page-footer
   .container
     .page-footer__wrap
-      div(class='page-footer__col  page-footer__col--large')
-        +logo()
-        +textContent({ text: 'Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»' })
-      .page-footer__col
-        +navMenu({ 
-          title: 'Навигация',
-          list: [
-            { label: 'О нас', path: '#' },
-            { label: 'Новости', path: '#' },
-            { label: 'Служба поддержки', path: '#' },
-            { label: 'Услуги', path: '#' }
-          ]
-        })
-      .page-footer__col
-        +navMenu({ 
-          title: 'О нас',
-          list: [
-            { label: 'О сервисе', path: '#' },
-            { label: 'Наша команда', path: '#' },
-            { label: 'Вакансии', path: '#' },
-            { label: 'Инвесторы', path: '#' }
-          ]
-        })
-      .page-footer__col
-        +navMenu({ 
-          title: 'Служба поддержки',
-          list: [
-            { label: 'Соглашения', path: '#' },
-            { label: 'Сообщества', path: '#' },
-            { label: 'Связь с нами', path: '#' }
-          ]
-        })
-      div(class='page-footer__col  page-footer__col--large')
-        +textContent({ title: 'Подписка', text: 'Получайте специальные предложения и новости сервиса' })
-        +input({ isButtonSplit: true, type: 'email', placeholder: 'Email' })
+      .page-footer__content
+        div(class='page-footer__col  page-footer__col--large')
+          +logo()
+          +textContent({ text: 'Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»' })
+        .page-footer__col
+          +navMenu({ 
+            title: 'Навигация',
+            list: [
+              { label: 'О нас', path: '#' },
+              { label: 'Новости', path: '#' },
+              { label: 'Служба поддержки', path: '#' },
+              { label: 'Услуги', path: '#' }
+            ]
+          })
+        .page-footer__col
+          +navMenu({ 
+            title: 'О нас',
+            list: [
+              { label: 'О сервисе', path: '#' },
+              { label: 'Наша команда', path: '#' },
+              { label: 'Вакансии', path: '#' },
+              { label: 'Инвесторы', path: '#' }
+            ]
+          })
+        .page-footer__col
+          +navMenu({ 
+            title: 'Служба поддержки',
+            list: [
+              { label: 'Соглашения', path: '#' },
+              { label: 'Сообщества', path: '#' },
+              { label: 'Связь с нами', path: '#' }
+            ]
+          })
+        div(class='page-footer__col  page-footer__col--large')
+          +textContent({ title: 'Подписка', text: 'Получайте специальные предложения и новости сервиса' })
+          +input({ isButtonSplit: true, type: 'email', placeholder: 'Email' })
