подключил стили copyright

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -36,4 +36,5 @@ body {
 @import '../components/text-content/text-content';
 @import '../components/nav-menu/nav-menu';
 @import '../components/input/input';
+@import '../components/copyright/copyright';
 @import '../components/footer/footer';
