--- a/app/components/footer/footer.pug
+++ b/app/components/footer/footer.pug
@@ -2,6 +2,7 @@ include ../logo/logo
 include ../text-content/text-content
 include ../nav-menu/nav-menu
 include ../input/input
+include ../copyright/copyright
 
 footer.page-footer
   .container
@@ -42,3 +43,5 @@ footer.page-footer
         div(class='page-footer__col  page-footer__col--large')
           +textContent({ title: 'Подписка', text: 'Получайте специальные предложения и новости сервиса' })
           +input({ isButtonSplit: true, type: 'email', placeholder: 'Email' })
+      .page-footer__side-info
+        +copyright({ year: 2018 })
