--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -10,6 +10,12 @@
   display: flex;
   flex-wrap: wrap;
   padding: 100px 0;
+  box-shadow: 0 1px 0 rgba(31, 32, 65, 0.1);
+}
+
+.page-footer__side-info {
+  padding: 25px 0;
+  // border-top: 1px solid ;
 }
 
 .page-footer__col {
