подключил social-buttons стили

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -37,4 +37,5 @@ body {
 @import '../components/nav-menu/nav-menu';
 @import '../components/input/input';
 @import '../components/copyright/copyright';
+@import '../components/social-buttons/social-buttons';
 @import '../components/footer/footer';
