--- a/app/components/social-buttons/social-buttons.scss
+++ b/app/components/social-buttons/social-buttons.scss
@@ -1,4 +1,15 @@
 .social-buttons__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   padding: 0;
   list-style: none;
+}
+
+.social-buttons__link .icon-content {
+  transition: fill 0.4s ease;
+}
+
+.social-buttons__link:hover .icon-content {
+  fill: darken($accentColor, 10%);
 }
