добавил разметку для main блока в index Page

--- a/app/index.pug
+++ b/app/index.pug
@@ -4,3 +4,12 @@ block variables
   - var title = "Toxin - подбери свой отель!"
   - var description = "Toxin description"
   - var pageClass = "index-page"
+
+block content
+  main
+    .index-block
+      .container
+        .index-block__wrap
+          section.find-hotel
+          .index-block__slogan
+            p Лучшие номера для вашей работы, отдыха и просто вдохновения
