--- a/app/components/main-menu/main-menu.scss
+++ b/app/components/main-menu/main-menu.scss
@@ -98,6 +98,7 @@
 }
 
 .main-menu__item:hover > .main-menu__sub-menu {
+  z-index: 100;
   transform: translate(-50%, 0);
   visibility: visible;
   opacity: 1;
