подключил стили Card

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -65,4 +65,5 @@ body {
 @import '../components/input/input';
 @import '../components/copyright/copyright';
 @import '../components/social-buttons/social-buttons';
+@import '../components/card/card';
 @import '../components/footer/footer';
