сделал date-wishes миксином

--- a/app/components/date-wishes/date-wishes.pug
+++ b/app/components/date-wishes/date-wishes.pug
@@ -1,4 +1,4 @@
-extends ../../layout/card.pug
-
-block variables
-  //- - var title = "Toxin - подбери свой отель!"
+mixin dateWishes()
+  section.date-wishes
+    .date-wishes__wrap
+      h2.date-wishes__title Найдём номера под ваши пожелания
