date-wishes больше не микисн

--- a/app/components/date-wishes/date-wishes.pug
+++ b/app/components/date-wishes/date-wishes.pug
@@ -1,4 +1,4 @@
-mixin dateWishes()
-  section.date-wishes
-    .date-wishes__wrap
-      h2.date-wishes__title Найдём номера под ваши пожелания
+section.date-wishes
+  .date-wishes__wrap
+    form(action="")
+      legend.date-wishes__title Найдём номера под ваши пожелания
