разметил date-wishes

--- a/app/components/date-wishes/date-wishes.pug
+++ b/app/components/date-wishes/date-wishes.pug
@@ -1,4 +1,12 @@
+include ../input/input
+include ../button/button
+
 section.date-wishes
   .date-wishes__wrap
     form(action="")
-      legend.date-wishes__title Найдём номера под ваши пожелания
+      fieldset
+        legend.date-wishes__title Найдём номера под ваши пожелания
+        +input({ labelName: 'Прибытие', placeholder: 'ДД.ММ.ГГГГ' })
+        +input({ labelName: 'Выезд', placeholder: 'ДД.ММ.ГГГГ' })
+        +input({ labelName: 'Гости', placeholder: 'Сколько гостей' })
+        +button({ title: 'Подобрать номер', buttonType: 'submit' })
