--- a/app/components/date-wishes/date-wishes.scss
+++ b/app/components/date-wishes/date-wishes.scss
@@ -1,3 +1,53 @@
+.date-wishes {
+  width: 380px;
+  background: $mainColor;
+  border-radius: 4px;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+
+  fieldset {
+    margin: 0;
+    padding: 0;
+    border: 0;
+  }
+
+  .input-group__label {
+    color: $contentColor;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
+  }
+
+  .button:last-child {
+    width: 100%;
+    margin-top: 31px;
+    padding: 14px 20px;
+  }
+}
+
+.date-wishes__wrap {
+  padding: 40px 30px 30px;
+}
+
+.date-wishes__group {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+
+  .input-group {
+    margin-right: 20px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
 .date-wishes__title {
   margin: 0;
+  margin-bottom: 20px;
+  color: $contentColor;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
 }
